...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/roadBookFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_roadbook" />
        <item
            android:id="@+id/directoryFragment"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_directory" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/bossMapFragment"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_maps" />
            />
        <item
            android:id="@+id/displayFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_view_proof_picture" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/settings"
            android:title="@string/application_settings" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/signoutButton"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/sign_out" />
    </group>
</menu>
