<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_signup_directors_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.signup.SignUpFragment">

    <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/full_name_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="337dp"
                android:layout_height="55dp"
                android:autofillHints=""
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="337dp"
                android:layout_height="55dp"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="337dp"
                android:layout_height="55dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
...
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/select_role_text">

            <AutoCompleteTextView
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>


...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:indicatorColor="@color/indigo_500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:text="@string/create_account_text"
...
