<resources>
    <string name="app_name">Factotum</string>
    <string name="title_activity_maps">Map with Marker</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="routes_fragment_label">Routes</string>
    <string name="maps_fragment_label">Maps</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_maps">Maps</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="google_maps">Google maps</string>
    <string name="show_all">Show Destination</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="Set">Set</string>
    <string name="get">Get</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_roadbook">RoadBook</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_picture">Picture</string>
    <string name="fab_add_description">add_floating_button</string>
    <string name="snap_text_record_added">Record added</string>
    <string name="del_button_text">Del</string>
    <string name="snap_text_on_rec_delete">Record deleted</string>
    <string name="temp_delete_action_button">temp_delete_action_button</string>
    <string name="snap_text_on_rec_archive">Record archived</string>
    <string name="unarchive_dialog_title">Unarchive the swiped record ?</string>
    <string name="snap_text_on_rec_unarchive">Record unarchived</string>

    <string name="menu_maps">Maps</string>
    <string name="run">Go-To Destination</string>
    <string name="rate_text_view">rate</string>
    <string name="wait_text_view">wait</string>
    <string name="arrival_text_view">arrival</string>
    <string name="actions_text_view">actions</string>

    <string name="main_diary_activity">Main Diary Activity</string>
    <string name="contact_name">John</string>
    <string name="contact_surname">Doe</string>
    <string name="contact_role">Boss</string>
    <string name="contact_image">Contact_image</string>
    <string name="contact_address">123 Example Street 1022 Lausanne</string>
    <string name="contact_phone">+4178*******</string>
    <string name="contact_details">Might just be a fun fact ;-)</string>
    <string name="back_to_list_button">Back to List of Contacts</string>
    <string name="all_contact_info">All contact Info</string>
    <string name="contact_details_intro">Contact Details</string>
    <string name="address_ex_layout">Address: </string>
    <string name="phone_nb_ex_layout">Phone Number: </string>
    <string name="notes_ex_layout">Notes: </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Access</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="no_role_selected">Please select a role</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_not_found">"User not found"</string>
    <string name="retrieve_user_failed">Error retrieving user</string>
    <string name="retrieve_user_success">User retrieved successfully</string>
    <string name="web_client_id">"539052463718–6gefd2fnlvbb1h9aiq09kil6sip37i0u.apps.googleusercontent.com"</string>
    <string name="forgot_my_password_text">Forgot my password</string>
    <string name="password_text">Password</string>
    <string name="register_via_another_account_text">Register via another account</string>
    <string name="i_don_t_have_an_account_text">I don\'t have an account</string>
    <string name="create_one_text">Create one</string>
    <string name="welcome_back_text">Welcome Back</string>
    <string name="e_mail_address_text">E-mail address</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="file_provider">"com.github.factotum_sdp.factotum.file-provider"</string>
    <string name="camera_permission_not_granted">Permission needed to take a photo</string>
    <string name="sign_out">Sign Out</string>

    <!-- Strings related to signup -->
    <string name="create_new_account">Create New Account</string>
    <string name="full_name_text">Full Name</string>
    <string name="create_account_text">Create Account</string>
    <string name="select_role_text">Select Role</string>
    <string name="signup_failed">"Sign Up failed"</string>
    <string name="update_users_failed">"Updating users failed"</string>


    <string name="rb_label_swiper_edition">Swipe R. Editon</string>
    <string name="rb_label_dragdrop"><![CDATA[Drag & Drop]]></string>
    <string name="edit_dialog_cancel_b">Cancel</string>
    <string name="edit_dialog_update_b">Confirm</string>
    <string name="menu_view_proof_picture">Proof Photos</string>
    <string name="refresh">Refresh</string>
    <string name="hint_dialog_client_id">Client ID</string>
    <string name="hint_dialog_timestamp">Timestamp</string>
    <string name="hint_dialog_waiting_time">Waiting time</string>
    <string name="hint_dialog_rate">Rate</string>
    <string name="hint_dialog_actions">Actions</string>
    <string name="hint_dialog_notes">Notes</string>
    <string name="rb_label_swipel_deletion">Swipe L. Deletion</string>
    <string name="swipeleft_confirm_button_label">Confirm</string>
    <string name="swipeleft_cancel_button_label">Cancel</string>
    <string name="delete_dialog_title">Delete the swiped record ?</string>
    <string name="edit_rejected_snap_label">Wrong format. Edition canceled</string>
    <string name="edit_confirmed_snap_label">Record edited</string>
    <string name="rb_label_touch_click">Touch click</string>
    <string name="share">Share</string>
    <string name="no_contacts_found">No contacts found. Please check your search criteria and try again.</string>
    <string name="add_contacts_floating_button">add Contacts floating button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="create_contact_text">Create contact</string>
    <string name="notes">Notes</string>
    <string name="drecord_notes_mi_title">DRecord notes</string>
    <string name="textvlabel_destination_id">Destination ID</string>
    <string name="textvlabel_client_id">Client ID</string>
    <string name="textvlabel_timestamp">Timestamp</string>
    <string name="textvlabel_waiting_time">Waiting Time</string>
    <string name="textvlabel_rate">Rate</string>
    <string name="textvlabel_actions">Actions</string>
    <string name="textvlabel_notes">Notes</string>
    <string name="rb_label_show_archived">Show archived</string>
    <string name="delete_contact_button">Delete Contact</string>
    <string name="button_modify_contact">Modify Contact</string>
    <string name="form_button_update">Update Contact</string>
    <string name="form_button_create">Create Contact</string>
    <string name="contact_surname_and_name">Doe John</string>
    <string name="search_contacts">Search contacts …</string>
    <string name="loc_service_notification_message">Location service for Factotum is working</string>
    <string name="loc_service_notification_title">Tracking location</string>
    <string name="end_shift">End Shift</string>
    <string name="finish_shift_alert_question">"Are you sure you want to end your shift?"</string>
    <string name="shift_ended">Shift ended</string>
    <string name="end_shift_dialog_title">End shift</string>
    <string name="textUsername">Username</string>
    <string name="contact_details_username">\@username</string>
    <string name="Single_contact_username">\@username</string>
    <string name="username_not_unique">Sorry, that username is already taken. Please choose a different username.</string>
    <string name="empty_username">Please enter username to add user.</string>
    <string name="roadbookpreferencescheckedtextview">RoadBookPreferencesCheckedTextView</string>
    <string name="application_settings">Application Settings</string>
    <string name="save_roadbook_preferences">Save RoadBook Preferences</string>
    <string name="load_road_book_back_up">Load RoadBook back-up</string>
    <string name="delete_all_roadbook">Delete all RoadBook</string>
    <string name="delete_all_roadbook_dialog_title">Delete all the current RoadBook records ?</string>
    <string name="positive_label_delete_all_roadbook_dialog">Confirm</string>
    <string name="negative_label_delete_all_roadbook_dialog">No !</string>
    <string name="snap_delete_all_roadbook">All Roadbook records have been deleted</string>
    <string name="snap_load_roadbook_backup">The last backup has been loaded</string>
    <string name="managing_client_text">Managing Client: </string>
    <string name="managing_client">\@managing_client</string>
    <string name="super_client_username">Super client username</string>
    <string name="super_client_id_not_valid">The managing client\'s username is not valid.</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="boss_maps">Boss Maps</string>
    <string name="decline_end_shift">Not now</string>
    <string name="invalid_client_id_snack_bar">Invalid Client ID, please correct it</string>
    <string name="invalid_client_id_text">Invalid Client ID</string>
    <string name="refresh_button">RefreshButton</string>
    <string name="bag_button">BagButton</string>
    <string name="location_switch">LocationSwitch</string>
    <string name="package_schedule_icon">package schedule icon</string>
    <string name="package_name_hint">Package Name</string>
    <string name="package_recipient_hint">Recipient</string>
    <string name="package_notes_hint">Package notes</string>
    <string name="confirm_label_pack_creation_dialog">Confirm</string>
    <string name="menu_date_picker">date_picker</string>
    <string name="menu_loading_bar">menu_loading_bar</string>
    <string name="notes_presence_indicator">Notes presence indicator</string>
    <string name="content_description_media">content_description_media</string>
    <string name="title">title\n</string>
    <string name="secondary_text">secondary_text</string>
    <string name="folders">Folders</string>
    <string name="photos">Photos</string>
    <string name="searchbar_hint">Search for Contacts…</string>
    <string name="create_new_record">Destination Record Edition</string>
    <string name="login_menu_title">Welcome</string>
    <string name="bag_edit_dialog_title">Edit Package Notes</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="settings">Settings</string>
    <string name="contact_details_fragment">Contact Details</string>
    <string name="contact_creation">Contact Creation</string>
    <string name="with_send_packs_button">With send packs Button</string>
    <string name="live_location_service_dialog_title">Live location service</string>
    <string name="location_permissions_enabled_message">Permissions enabled !</string>
    <string name="notifications_not_enabled_message">Allowed permissions are not sufficient, the notifications should be enabled too.</string>
    <string name="precise_location_not_enabled_message">Allowed permissions are not sufficient, the precise location is needed.</string>
    <string name="delivery_history">Delivery History</string>
    <string name="erase">Erase</string>
    <string name="live_tracking_disabled_text">Live tracking is disabled</string>
</resources>